[package]
name = "nimbus"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.18-1", features = ["blocking"]}

[[bin]]
name = "nimbus"         # The name of the target.
path = "nimbus/main.rs" # The source file of the target.
test = false            # Is tested by default.
doctest = false         # Documentation examples are tested by default.
bench = false           # Is benchmarked by default.
doc = false             # Is documented by default.
plugin = false          # Used as a compiler plugin (deprecated).
proc-macro = false      # Set to `true` for a proc-macro library.
harness = true          # Use libtest harness.
edition = "2021"        # The edition of the target.
crate-type = []         # The crate types to generate.
